Fix align

--- a/frontend/src/components/Discovery/Discovery.css
+++ b/frontend/src/components/Discovery/Discovery.css
@@ -4,14 +4,15 @@
 }
 
 .picture {
-    width: 70%;   
+    width: 70%;
 }
 
-.DisImg { 
-    aspect-ratio: 11/3;
+.DisImg {
+    aspect-ratio: 11/5;
     object-fit: cover;
-    max-height: 100%; 
+    max-height: 100%;
     max-width: 100%;
+    position: relative;
 }
 
 .discovery {
@@ -20,11 +21,33 @@
 
 .button {
     text-align: center;
+    position: relative;
 }
 
 .DisHead {
     text-align: center;
     color: aliceblue;
+    position: relative;
+    padding: 0 4vw 0;
 }
 
+.nopadding {
+    padding: 0 !important;
+    margin: 0 !important;
+}
 
+@media screen and (max-width: 600px) {
+    .DisHead h1 {
+        font-size: 15px;
+    }
+
+    .DisHeight {
+        max-height: 120px;
+    }
+}
+
+@media screen and (min-width: 601px) {
+    .DisHeight {
+        max-height: 600px;
+    }
+}
